# movie_streamlit

./: main.py  pyproject.toml  streamlit_app.py  tsne.csv
